# termicool

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  test_revert.scpt
.github/workflows/: release.yml
docs/: demo.html  index.html
shared/: default_theme.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ide_adapter.rs  lib.rs  linux_adapter.rs  mac_adapter.rs  prompt_engine.rs  sandbox.rs  win_adapter.rs
src/store/: useTermStore.ts
